# Multimodal-Calib

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
Binaries/: Readme.txt
Code/: CI.h  CMakeLists.txt  Calib.cu  Calib.h  Cameras.cu  Cameras.h  GenList.cu  GenList.h  GpuScan.cpp  ImageList.cu  ImageList.h  Kernel.cu  Kernel.h  Kernels.cu  Kernels.h  MatCalls.cu  MatCalls.h  MatlabCalls.c  MatlabCalls.cu  MatlabCalls.h  Metric.cu  Metric.h  Metrics.cu  Metrics.h  Pair.cu  Pair.h  Points.cpp  Points.cu  Points.h  Render.cu  Render.h  Scan.cpp  Scan.cu  Scan.h  ScanList.cu  ScanList.h  Setup.cu  Setup.h  Tform.cpp  Tform.cu  (+11 more)
Code/CI/: change_log.txt  license.txt  readme.html
Code/MI/: cuda_basics.cu  cuda_basics.h  cuda_hist.cu  cuda_hist.h  cuda_mi.cu  cuda_mi.h  gpu_basics.cu  gpu_basics.h  gpu_hist.cu  gpu_mi.cu
Doxygen/: Doxyfile
Matlab/: AffineDemo.m  Align.m  CameraDemo.m  ChangePL.m  CheckLoaded.m  ClearEverything.m  ClearLibrary.m  ColourDemo.m  ColourScan.m  ColourVelodyne.m  ConvexOptimize.m  Copy_of_CameraDemo.m  Copy_of_FordConvexTest.m  CreateTformMat.m  EvalMetric.m  ExampleRun.m  ExampleRun_depth_pinpoint.m  FordConfig.m  FordConvexTest.m  FordConvexTest2.m  GetBaseImage.m  GetGen.m  GetImagesC.m  GetNorms.m  GetPointClouds.m  ImagePairReg.m  ImagePairTest.m  Initilize.m  InterpolateBaseValues.m  LadybugOutput.m  LadybugVelReg.m  LadybugVelReg_FORDSETUP.m  LadybugVelTest.m  ListToImage.m  LoadBaseImage.m  LoadMoveImage.m  LoadMoveScan.m  MyHistEq.m  Optimize.m  OutputImage.m  (+40 more)
Sample Data/: More datasets available on request.txt
(+329 files in other folders)
